/**
 *  Task Queue API
 */


syntax = "proto3";

package peloton.internal.queue;

option go_package = "taskqueue";

import "peloton/task/task.proto";

service TaskQueue {

  // Enqueue a list of tasks
  rpc Enqueue(EnqueueRequest) returns (EnqueueResponse);

  // Dequeue a list of tasks
  rpc Dequeue(DequeueRequest) returns (DequeueResponse);
}


message EnqueueRequest {
  // The list of tasks to enqueue
  repeated task.TaskInfo tasks = 1;
}

message EnqueueResponse {
  // TODO: Add error handling here
}

message DequeueRequest {
  // Max number of tasks to dequeue
  uint32 limit = 1;
}

message DequeueResponse {
  // The list of tasks that have been dequeued
  repeated task.TaskInfo tasks = 1;
}
